added strategy application to modeling

--- a/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3babed32-ca62-4086-901e-5920b5a4772e",
+       "ref": "d3f9e81c-2498-4747-9289-3c373ab31cb2",
        "rows": [
         [
          "2024-01-04 00:00:00",
@@ -1067,7 +1067,7 @@
        "[427 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a8d28e0c-9066-4649-94b8-740d5a655f4a",
+       "ref": "37b7f56e-9d41-4b37-9e81-db75b5860e23",
        "rows": [
         [
          "0",
@@ -4945,7 +4945,7 @@
        "[427 rows x 60 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4965,7 +4965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4974,7 +4974,7 @@
        "(427, 60)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4985,7 +4985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -5299,7 +5299,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e503ae75-3d79-4815-9502-4957ff882d0e",
+       "ref": "586dabf4-30dc-41e5-99d7-40b5c438d056",
        "rows": [
         [
          "count",
@@ -6115,7 +6115,7 @@
        "[8 rows x 60 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6135,7 +6135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -6178,7 +6178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -6499,7 +6499,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "02e27c4e-757a-4d58-af19-da23b6a74a7e",
+       "ref": "100f3c59-3f3f-41fa-b36c-a5118af34fc9",
        "rows": [
         [
          "0",
@@ -10038,7 +10038,7 @@
        "[427 rows x 60 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10099,7 +10099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -10438,7 +10438,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "2b0a85aa-b41f-4b51-bd9e-4fc96246388d",
+       "ref": "63b12d65-cb04-43a1-98d6-64ac5a1e7602",
        "rows": [
         [
          "0",
@@ -14227,7 +14227,7 @@
        "[427 rows x 65 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14325,7 +14325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -14669,7 +14669,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "14529a97-07ed-4d51-bc13-3f863e0a9a22",
+       "ref": "b3d86845-401f-41fa-99c2-ad0ab1be42a4",
        "rows": [
         [
          "0",
@@ -18508,7 +18508,7 @@
        "[427 rows x 66 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18561,7 +18561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -18915,7 +18915,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3475159f-da95-4fd6-a616-bb8b2fb8f953",
+       "ref": "9b8f656a-837c-4348-bdbd-c146bfb277ee",
        "rows": [
         [
          "0",
@@ -22854,7 +22854,7 @@
        "[427 rows x 68 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22900,7 +22900,222 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# drop irrelevant columns"
+    "# drop irrelevant or redundant columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_no_nulls=data.dropna(axis=0, how='any')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## low variance variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Sessions', 'Seven-day active users', '28-day active users',\n",
+      "       'New users', 'Scrolled users', 'Engaged sessions', 'Views',\n",
+      "       'Event count', 'Events per session', 'Item-list view events',\n",
+      "       'Item view events', 'Add to baskets', 'Checkouts',\n",
+      "       'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue',\n",
+      "       'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU',\n",
+      "       'Views per user', 'Total users', 'Promotion views', 'Promotion clicks',\n",
+      "       'One-day active users', 'Sessions Mobile',\n",
+      "       'Seven-day active users Mobile', '28-day active users Mobile',\n",
+      "       'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile',\n",
+      "       'Views Mobile', 'Event count Mobile', 'Events per session Mobile',\n",
+      "       'Item-list view events Mobile', 'Item view events Mobile',\n",
+      "       'Add to baskets Mobile', 'Checkouts Mobile',\n",
+      "       'E-commerce purchases Mobile', 'Average purchase revenue Mobile',\n",
+      "       'Purchase revenue Mobile', 'First time purchasers Mobile',\n",
+      "       'Average session duration Mobile', 'Sessions (none)',\n",
+      "       'Sessions (not set)', 'Sessions cpc', 'Sessions cpm', 'Sessions email',\n",
+      "       'Sessions organic', 'Sessions other', 'Sessions referral', 'season',\n",
+      "       'commercial_season', 'week_of_month', 'day_of_week_nr'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "\n",
+    "variable_types: dict[str, list] = get_variable_types(data_no_nulls)\n",
+    "\n",
+    "numeric: list[str] = [col for col in variable_types[\"numeric\"] if col != \"Date\"]\n",
+    "\n",
+    "# Remove the 'Date' column before applying VarianceThreshold\n",
+    "data_no_nulls = data_no_nulls[numeric]\n",
+    "\n",
+    "\n",
+    "# Remove features with very low variance\n",
+    "selector = VarianceThreshold(threshold=0.1)  # Ajuste o threshold conforme necessário\n",
+    "X_reduced = selector.fit_transform(data_no_nulls)\n",
+    "\n",
+    "# Get selected features\n",
+    "selected_features = data_no_nulls.columns[selector.get_support()]\n",
+    "print(selected_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial features:\n",
+      " ['Sessions', 'Bounce rate', 'Seven-day active users', '28-day active users', 'New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Events per session', 'Item-list view events', 'Item view events', 'Item promotion click-through rate', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'DAU/MAU', 'DAU/WAU', 'Sessions per user', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'One-day active users', 'Sessions Mobile', 'Bounce rate Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Item promotion click-through rate Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (none)', 'Sessions (not set)', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr']\n",
+      "\n",
+      "Feature Variance:\n",
+      " Sessions                   1255471.8\n",
+      "Bounce rate                      0.0\n",
+      "Seven-day active users    10545334.6\n",
+      "28-day active users       73484570.7\n",
+      "New users                   406075.1\n",
+      "                             ...    \n",
+      "Sessions referral            60173.3\n",
+      "season                           3.5\n",
+      "commercial_season                1.4\n",
+      "week_of_month                    1.7\n",
+      "day_of_week_nr                   3.9\n",
+      "Length: 62, dtype: float64\n",
+      "Initial Features df_prep:\n",
+      " ['week_of_month', 'Promotion clicks', 'First time purchasers', 'commercial_season', 'Item-list view events', 'Views per user', 'Sessions Mobile', 'Sessions cpc', 'Sessions organic', 'DAU/MAU', '28-day active users', 'One-day active users', 'E-commerce purchases Mobile', 'Events per session', 'ARPU', 'Add to baskets', 'Sessions per user', 'Views Mobile', 'Add to baskets Mobile', 'Average session duration Mobile', 'Seven-day active users', 'Events per session Mobile', 'Checkouts Mobile', 'day_of_week_nr', 'Scrolled users', 'Sessions email', 'Purchase revenue', 'E-commerce purchases', 'Average purchase revenue', 'Item promotion click-through rate', 'Item view events Mobile', 'New users', 'Promotion views', 'Bounce rate Mobile', 'season', 'First time purchasers Mobile', 'Sessions (none)', 'Views', 'Average purchase revenue Mobile', 'Item-list view events Mobile', '28-day active users Mobile', 'Sessions other', 'DAU/WAU', 'Checkouts', 'Engaged sessions', 'Item promotion click-through rate Mobile', 'Item view events', 'Total users', 'Sessions referral', 'Scrolled users Mobile', 'ARPPU', 'Event count', 'Average session duration', 'Bounce rate', 'Sessions cpm', 'New users Mobile', 'Engaged sessions Mobile', 'Purchase revenue Mobile', 'Seven-day active users Mobile', 'Sessions (not set)', 'Sessions', 'Event count Mobile']\n",
+      "\n",
+      "Removed Features (low variance < 0.100):\n",
+      " ['Sessions per user', 'Bounce rate Mobile', 'Bounce rate', 'DAU/MAU', 'DAU/WAU', 'Item promotion click-through rate Mobile', 'Item promotion click-through rate']\n",
+      "\n",
+      "Final Features list:\n",
+      " ['Sessions', 'Seven-day active users', '28-day active users', 'New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Events per session', 'Item-list view events', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'One-day active users', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (none)', 'Sessions (not set)', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print initial features\n",
+    "print(\"Initial features:\\n\", data_no_nulls.columns.tolist())\n",
+    "\n",
+    "# Compute variance for each feature\n",
+    "feature_variance = data_no_nulls.var().round(1)\n",
+    "print(\"\\nFeature Variance:\\n\", feature_variance)\n",
+    "\n",
+    "# Define threshold (adjust based on the dataset)\n",
+    "threshold = 0.1\n",
+    "selector = VarianceThreshold(threshold=threshold)\n",
+    "\n",
+    "# Fit and transform the dataset\n",
+    "X_reduced = selector.fit_transform(data_no_nulls)\n",
+    "\n",
+    "# Get selected features\n",
+    "initial_features = list(set(data_no_nulls.columns))\n",
+    "removed_features = list(set(data_no_nulls.columns) - set(selected_features))\n",
+    "selected_features = data_no_nulls.columns[selector.get_support()]\n",
+    "\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Initial Features df_prep:\\n\", initial_features)\n",
+    "print(\"\\nRemoved Features (low variance < {:.3f}):\\n\".format(threshold), removed_features)\n",
+    "print(\"\\nFinal Features list:\\n\", selected_features.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[selected_features]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## redundant variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_no_nulls=data.dropna(axis=0, how='any')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features highly correlated with 'Sessions': ['New users', 'Scrolled users', 'Engaged sessions', 'Event count', 'One-day active users']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "variable_types: dict[str, list] = get_variable_types(data_no_nulls)\n",
+    "\n",
+    "numeric: list[str] = [col for col in variable_types[\"numeric\"] if col != \"Date\"]\n",
+    "\n",
+    "data_no_nulls = data_no_nulls[numeric]\n",
+    "\n",
+    "# Calculate correlation matrix\n",
+    "corr_matrix = data_no_nulls[numeric].corr()\n",
+    "\n",
+    "# Identify features highly correlated with the target variable \"Sessions\" (correlation > 0.9)\n",
+    "high_corr_features = corr_matrix['Sessions'][corr_matrix['Sessions'] > 0.9].index.tolist()\n",
+    "\n",
+    "# Remove the target variable itself from the list\n",
+    "high_corr_features.remove('Sessions')\n",
+    "\n",
+    "# Print the highly correlated features\n",
+    "print(f\"Features highly correlated with 'Sessions': {high_corr_features}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining features: 50\n",
+      "Remaining features: ['Sessions', 'Seven-day active users', '28-day active users', 'Views', 'Events per session', 'Item-list view events', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (none)', 'Sessions (not set)', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop the correlated features\n",
+    "data = data.drop(columns=high_corr_features)\n",
+    "\n",
+    "# Print remaining features count\n",
+    "print(f\"Remaining features: {len(data.columns)}\")\n",
+    "print(f\"Remaining features: {data.columns.tolist()}\")"
    ]
   },
   {
@@ -22912,7 +23127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
