--- a/time_series_forecasting/notebooks/dataset_3/5_ga4_merch_agg_2024_time_series_smoothing.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/5_ga4_merch_agg_2024_time_series_smoothing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
     "data=pd.read_csv(filepath, decimal=\".\",  index_col='Date', parse_dates=True,  infer_datetime_format=True)\n",
     "\n",
     " \n",
-    "# target='E-commerce purchases' # using for testing null values on supporting variables\n",
+    "target='E-commerce purchases' # using for testing null values\n",
     "\n",
     "# target='Sessions' # the target class for project which does not contain nulls\n",
     "\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b8ef2b1a-8044-4e24-893d-7dd8de360109",
+       "ref": "3208804c-e967-47df-9dcc-247a7e4f7a91",
        "rows": [
         [
          "2024-01-04 00:00:00",
@@ -3880,7 +3880,7 @@
        "[427 rows x 55 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3918,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3970,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +3979,7 @@
        "<Axes: xlabel='Date', ylabel='E-commerce purchases'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4021,7 +4021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4046,7 +4046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -4098,7 +4098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -4107,7 +4107,7 @@
        "<Axes: xlabel='Date', ylabel='E-commerce purchases'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4142,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4201,9 +4201,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filling missing values for column: E-commerce purchases\n",
+      "Filling missing values for column: Average purchase revenue\n",
+      "Filling missing values for column: Purchase revenue\n",
+      "Filling missing values for column: First time purchasers\n",
+      "Filling missing values for column: ARPU\n",
+      "Filling missing values for column: ARPPU\n",
+      "Filling missing values for column: Promotion views\n",
+      "Filling missing values for column: Promotion clicks\n",
+      "Filling missing values for column: Scrolled users Mobile\n",
+      "Filling missing values for column: Checkouts Mobile\n",
+      "Filling missing values for column: E-commerce purchases Mobile\n",
+      "Filling missing values for column: Average purchase revenue Mobile\n",
+      "Filling missing values for column: Purchase revenue Mobile\n",
+      "Filling missing values for column: First time purchasers Mobile\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "if test_data==False:\n",
@@ -4211,7 +4232,7 @@
     "    data_copy=data.copy()\n",
     "    \n",
     "    \n",
-    "    data_copy=apply_strategy_2(data_copy)\n",
+    "    data_copy=apply_strategy_1(data_copy)\n",
     "    \n",
     "    data_copy.reset_index(inplace=True)\n",
     "    \n",
