--- a/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0470a368-54b6-45c9-b19f-7ee733699f27",
+       "ref": "49a585eb-60d1-4089-a7cd-9d409f81170e",
        "rows": [
         [
          "2024-01-04 00:00:00",
@@ -1067,7 +1067,7 @@
        "[427 rows x 9 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "2eaf11ea-9404-41d2-a824-a4b058982c02",
+       "ref": "73a9331e-45e2-4857-bb7c-8a5f75c05c83",
        "rows": [
         [
          "0",
@@ -4945,7 +4945,7 @@
        "[427 rows x 60 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4965,7 +4965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -4974,7 +4974,7 @@
        "(427, 60)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4985,7 +4985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -5299,7 +5299,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d966af13-0299-4e45-8369-afe328167fc6",
+       "ref": "ded4bb2c-faad-428a-a891-4d472e0b6393",
        "rows": [
         [
          "count",
@@ -6115,7 +6115,7 @@
        "[8 rows x 60 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6135,7 +6135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -6178,7 +6178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -6499,7 +6499,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "de97812a-1e74-4fab-acfc-44e12002a1a4",
+       "ref": "43d11e1c-b804-4429-9e76-3ae3489fb97d",
        "rows": [
         [
          "0",
@@ -10038,7 +10038,7 @@
        "[427 rows x 60 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10099,7 +10099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -10438,7 +10438,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "7919e538-cc22-4adb-830a-600c77d6c66d",
+       "ref": "6663d859-43ab-45f8-9a7f-458feb2c8028",
        "rows": [
         [
          "0",
@@ -14227,7 +14227,7 @@
        "[427 rows x 65 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14325,7 +14325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -14669,7 +14669,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "c2a6e09b-5a46-448b-b7e8-257e3c6eafbb",
+       "ref": "5083430c-45b8-481c-9537-b0f403007f15",
        "rows": [
         [
          "0",
@@ -18508,7 +18508,7 @@
        "[427 rows x 66 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18561,7 +18561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -18915,7 +18915,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b26bb088-dce1-482b-8e7b-26ad7e07d946",
+       "ref": "e9f9d352-0344-4ebf-abab-e57366998624",
        "rows": [
         [
          "0",
@@ -22854,7 +22854,7 @@
        "[427 rows x 68 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22905,7 +22905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22921,7 +22921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -22973,7 +22973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -22997,10 +22997,10 @@
       "day_of_week_nr                   3.9\n",
       "Length: 62, dtype: float64\n",
       "Initial Features df_prep:\n",
-      " ['week_of_month', 'Promotion clicks', 'First time purchasers', 'commercial_season', 'Item-list view events', 'Views per user', 'Sessions Mobile', 'Sessions cpc', 'Sessions organic', 'DAU/MAU', '28-day active users', 'One-day active users', 'E-commerce purchases Mobile', 'Events per session', 'ARPU', 'Add to baskets', 'Sessions per user', 'Views Mobile', 'Add to baskets Mobile', 'Average session duration Mobile', 'Seven-day active users', 'Events per session Mobile', 'Checkouts Mobile', 'day_of_week_nr', 'Scrolled users', 'Sessions email', 'Purchase revenue', 'E-commerce purchases', 'Average purchase revenue', 'Item promotion click-through rate', 'Item view events Mobile', 'New users', 'Promotion views', 'Bounce rate Mobile', 'season', 'First time purchasers Mobile', 'Sessions (none)', 'Views', 'Average purchase revenue Mobile', 'Item-list view events Mobile', '28-day active users Mobile', 'Sessions other', 'DAU/WAU', 'Checkouts', 'Engaged sessions', 'Item promotion click-through rate Mobile', 'Item view events', 'Total users', 'Sessions referral', 'Scrolled users Mobile', 'ARPPU', 'Event count', 'Average session duration', 'Bounce rate', 'Sessions cpm', 'New users Mobile', 'Engaged sessions Mobile', 'Purchase revenue Mobile', 'Seven-day active users Mobile', 'Sessions (not set)', 'Sessions', 'Event count Mobile']\n",
+      " ['New users Mobile', 'Scrolled users', 'First time purchasers', '28-day active users Mobile', 'ARPU', 'New users', 'Event count', 'Sessions cpc', 'Total users', 'week_of_month', 'Item promotion click-through rate', 'Sessions (not set)', 'Bounce rate', 'Item view events', 'E-commerce purchases Mobile', 'Checkouts Mobile', 'Sessions cpm', 'Item-list view events', 'E-commerce purchases', 'Average purchase revenue Mobile', 'Item view events Mobile', 'Sessions email', 'Average purchase revenue', 'Views Mobile', 'Sessions Mobile', 'Average session duration', 'Sessions per user', 'Add to baskets Mobile', 'Purchase revenue Mobile', 'Scrolled users Mobile', 'Item-list view events Mobile', 'Views', 'Sessions other', 'Promotion clicks', 'Engaged sessions Mobile', 'Events per session Mobile', 'Checkouts', 'Bounce rate Mobile', 'season', '28-day active users', 'commercial_season', 'day_of_week_nr', 'Average session duration Mobile', 'Item promotion click-through rate Mobile', 'Engaged sessions', 'One-day active users', 'Sessions', 'Seven-day active users', 'Event count Mobile', 'Sessions referral', 'Sessions organic', 'Seven-day active users Mobile', 'Events per session', 'ARPPU', 'DAU/MAU', 'Add to baskets', 'First time purchasers Mobile', 'Sessions (none)', 'Promotion views', 'Views per user', 'DAU/WAU', 'Purchase revenue']\n",
       "\n",
       "Removed Features (low variance < 0.100):\n",
-      " ['Sessions per user', 'Bounce rate Mobile', 'Bounce rate', 'DAU/MAU', 'DAU/WAU', 'Item promotion click-through rate Mobile', 'Item promotion click-through rate']\n",
+      " ['Item promotion click-through rate Mobile', 'DAU/MAU', 'Sessions per user', 'Item promotion click-through rate', 'Bounce rate', 'DAU/WAU', 'Bounce rate Mobile']\n",
       "\n",
       "Final Features list:\n",
       " ['Sessions', 'Seven-day active users', '28-day active users', 'New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Events per session', 'Item-list view events', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'One-day active users', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (none)', 'Sessions (not set)', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr']\n"
@@ -23036,7 +23036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -23355,7 +23355,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b144e7da-533f-434b-ba31-2ca211a97a45",
+       "ref": "0d26dcf3-9a13-4c72-a2dd-5217445d210d",
        "rows": [
         [
          "0",
@@ -26944,7 +26944,7 @@
        "[427 rows x 61 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26964,7 +26964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26973,14 +26973,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features too highly correlated with 'Sessions' to drop: ['New users', 'Scrolled users', 'Engaged sessions', 'Event count', 'One-day active users']\n"
+      "Features too highly correlated with 'Sessions' to drop: ['New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Item-list view events', 'Item view events', 'Checkouts', 'E-commerce purchases', 'First time purchasers', 'Promotion views', 'One-day active users', 'Sessions (none)', 'Sessions organic']\n"
      ]
     }
    ],
@@ -26996,8 +26996,8 @@
     "# Calculate correlation matrix\n",
     "corr_matrix = data_no_nulls[numeric].corr()\n",
     "\n",
-    "# Identify features highly correlated with the target variable \"Sessions\" (correlation > 0.9)\n",
-    "high_corr_features = corr_matrix['Sessions'][corr_matrix['Sessions'] > 0.9].index.tolist()\n",
+    "# Identify features highly correlated with the target variable \"Sessions\" (correlation > 0.8)\n",
+    "high_corr_features = corr_matrix['Sessions'][corr_matrix['Sessions'] > 0.8].index.tolist()\n",
     "\n",
     "# Remove the target variable itself from the list\n",
     "high_corr_features.remove('Sessions')\n",
@@ -27009,15 +27009,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining features: 56\n",
-      "Remaining features: ['Date', 'Sessions', 'Seven-day active users', '28-day active users', 'Views', 'Events per session', 'Item-list view events', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (none)', 'Sessions (not set)', 'Sessions affiliate', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr', 'is_weekend', 'is_holiday', 'is_major_event_day', 'is_commercial_event_day']\n"
+      "Remaining features: 47\n",
+      "Remaining features: ['Date', 'Sessions', 'Seven-day active users', '28-day active users', 'Events per session', 'Add to baskets', 'Average purchase revenue', 'Purchase revenue', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion clicks', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (not set)', 'Sessions affiliate', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr', 'is_weekend', 'is_holiday', 'is_major_event_day', 'is_commercial_event_day']\n"
      ]
     }
    ],
@@ -27039,7 +27039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
