--- a/time_series_forecasting/notebooks/dataset_3/4_ga4_merch_agg_2024_time_series_differentiation.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/4_ga4_merch_agg_2024_time_series_differentiation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "<Axes: xlabel='Date', ylabel='Sessions'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "180f6d19-34c3-4de9-a149-1c1d85cfb919",
+       "ref": "312a2b97-26e0-4843-87c2-e4402165bf0d",
        "rows": [
         [
          "2024-01-05 00:00:00",
@@ -3390,7 +3390,7 @@
        "[426 rows x 46 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3423,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3474,7 +3474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3483,7 +3483,7 @@
        "<Axes: xlabel='Date', ylabel='Sessions'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3518,7 +3518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3529,17 +3529,19 @@
       "0  No Differentiation  258.235372   94123.895253  306.796179  0.709111   \n",
       "1     Differentiation  245.099452  106356.650484  326.123674  0.603580   \n",
       "\n",
-      "        MAPE  \n",
-      "0  19.869564  \n",
-      "1        inf  \n"
+      "           MAPE  \n",
+      "0  1.986956e+01  \n",
+      "1  2.016047e+12  \n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "\n",
+    "\n",
     "def mean_absolute_percentage_error(y_true, y_pred):\n",
-    "    return np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
+    "    epsilon = 1e-10  # Small constant to avoid division by zero\n",
+    "    return np.mean(np.abs((y_true - y_pred) / (y_true + epsilon))) * 100\n",
     "\n",
     "# Calculate performance metrics for each model\n",
     "metrics = {\n",
@@ -3580,7 +3582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
